Zrownoleglenie skladnika des
 - Obliczenie kumulatywnej sumy (wstecz)
 - Nieznaczne polepszenie czasow wykonywania
 - Testowe zadanie (4 bodies 4 threads) sprawdzone
EDIT: Blad dla liczby watkow rownej 1 i 2. Zrodlo bledu: Znak += zapisany w niewlasciwej linijce w pierwszej petli omp for:
sum = ...          A POWINNO BYC sum += ...
des.col(i) += sum; A POWINNO BYC des.col(i) = sum;

--- a/Sekwencyjny/.cproject
+++ b/Sekwencyjny/.cproject
@@ -44,7 +44,7 @@
 							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.mingw.exe.debug.1811511099" name="MinGW C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.mingw.exe.debug">
 								<option id="gnu.cpp.link.option.libs.77850204" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" useByScannerDiscovery="false"/>
 								<option id="gnu.cpp.link.option.paths.1640708796" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" useByScannerDiscovery="false"/>
-								<option id="gnu.cpp.link.option.flags.1038731217" superClass="gnu.cpp.link.option.flags" useByScannerDiscovery="false" value="-fopenmp" valueType="string"/>
+								<option id="gnu.cpp.link.option.flags.750895989" name="Linker flags" superClass="gnu.cpp.link.option.flags" useByScannerDiscovery="false" value="-fopenmp" valueType="string"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.363140860" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
@@ -134,5 +134,4 @@
 		</configuration>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
-	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
